--- a/src/main/sass/schauderhaft.scss
+++ b/src/main/sass/schauderhaft.scss
@@ -231,6 +231,9 @@ section[data-background-size] .footer span {
   box-shadow: none;
 }
 
-.reveal git .small {
+.reveal .small {
   font-size: 70%;
+}
+.reveal .huge {
+  font-size: 300%;
 }
